<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/HomeFragment"
            android:title="@string/menu_search"
            android:icon="@drawable/ic_search"/>
        <item
            android:id="@+id/listMusicLocalFragment"
            android:title="@string/menu_list_musics_phone"
            android:icon="@drawable/ic_list"/>
        <item
            android:id="@+id/listFavorisFragment"
            android:title="@string/menu_list_musics_favoris"
            android:icon="@drawable/ic_star"/>
        <item
            android:id="@+id/reccordFragment"
            android:title="@string/menu_record"
            android:icon="@drawable/ic_microphone"
            />
        <item
            android:id="@+id/spotifyConnectFragment"
            android:title="@string/menu_spotify"
            android:icon="@drawable/ic_spotify_sketch"/>
    </group>
</menu>