<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/erreur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NotFoundFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_found_title"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/not_found_message"
            android:drawableBottom="@drawable/dono"
            />

        <Button
            android:id="@+id/not_found_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found_suggestions"
            android:background="@color/design_default_color_primary_dark"
            />

    </LinearLayout>
</LinearLayout>