<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".controler.SplashActivity"
    android:background="@color/purple"

    >

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo_menu"
        android:contentDescription="@string/txt_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/splash_text_box"
        />

    <LinearLayout
        android:id="@+id/splash_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/splash_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:fontFamily="@font/gotham"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/splash_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description_noms"
            android:fontFamily="@font/print_clearly"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>