<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.HomeFragment"
    android:id="@+id/fragment_lyrics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_list_musics"
                android:contentDescription="@string/background_description" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/print_clearly"
                android:text="@string/txt_hey"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gotham"
                android:text="@string/search_lyrics_title"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="-44dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="@color/grey">

                    <EditText
                        android:id="@+id/songName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/music_note"
                        android:fontFamily="@font/calibri"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:hint="@string/txt_musique"
                        android:autofillHints="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColorHint="@color/grey">

                    <EditText
                        android:id="@+id/artistName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="16dp"
                        android:drawableStart="@drawable/musician"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/txt_artiste"
                        android:autofillHints="@string/txt_artiste" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/queryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_search"
                    style="@style/ButtonStyle"
                    />
            </FrameLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:paddingEnd="30dp"
                android:paddingStart="0dp"
                android:layout_gravity="end|center"
                android:theme="@style/ProgressBarTheme"
                android:visibility="invisible"
                />
        </FrameLayout>

    </LinearLayout>

</ScrollView>