<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_lyrics_result"
    tools:context=".fragments.LyricsResultFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_results"
                android:contentDescription="@string/background_description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/lyrics_result_title_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/print_clearly"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/lyrics_result_title_top"
                app:layout_constraintTop_toTopOf="parent"
                />


            <TextView
                android:id="@+id/lyrics_result_title_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/lyrics_result_title_top"
                />

            <TextView
                android:id="@+id/lyrics_result_title_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/print_clearly"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/lyrics_result_title_middle"
                />

            <ImageView
                android:id="@+id/lyrics_result_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:contentDescription="@string/icon_favorite_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="-44dp"

            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:contentPadding="16dp">

            <TextView
                android:id="@+id/lyrics_result_lyrics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/lyrics_result_new_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics_result_new_search"
            style="@style/ButtonStyle"
            android:visibility="gone"
            />

    </LinearLayout>
</ScrollView>